remove rest of create-react-app styles

--- a/src/css/App.module.scss
+++ b/src/css/App.module.scss
@@ -1,24 +1,16 @@
 @import "src/css/index.scss";
 
-.app {
-  text-align: center;
+.header {
+  padding: 1em 2em;
+  background-color: adjust-color(purple, $saturation: -75%);
+  color: #ffffffed;
 }
 
-.appLogo {
-  height: 40vmin;
+.heading {
+  margin: 0;
 }
 
-.appHeader {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.appLink {
-  color: #09d3ac;
+.body {
+  margin: 0 auto;
+  max-width: 50rem;
 }
