--- a/src/components/Form/css/Form.module.scss
+++ b/src/components/Form/css/Form.module.scss
@@ -110,6 +110,13 @@ input[type="text"] {
   position: absolute;
 }
 
+.actuallySubmit {
+  @include paragraph($weight: bold);
+
+  border: 4px solid black;
+  padding: 0.25em 0.5em;
+}
+
 .question {
   @include paragraph($size: medium);
 
@@ -123,4 +130,54 @@ input[type="text"] {
 
 .additionInfo .question {
   margin: 0;
+}
+
+.imageForm {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 80%;
+
+  .heading {
+    max-width: 7em;
+    text-align: center;
+  }
+
+  & > form {
+    display: flex;
+    align-items: center;
+    border: 4px solid black;
+    width: 100%;
+    height: 16.875em;
+  }
+
+  input {
+    @include visually-hidden;
+  }
+
+  button:not(.navbutton) {
+    @include paragraph($weight: bold);
+    padding: 0.5em;
+    border: 4px solid black;
+    appearance: none;
+    margin-bottom: 1em;
+    background: transparent;
+    display: block;
+
+    &:hover {
+      background: transparent;
+    }
+
+    &::after {
+      content: ".";
+      @include paragraph($weight: bold);
+    }
+  }
+}
+
+.imagequestion {
+  @include paragraph($size: medium);
+  max-width: 8.3em;
+  text-align: center;
 }
